tests/errors/2006-23.vb
'#compiler-options:/keycontainer:
'#compiler-message:Command line error BC2006 : option 'keycontainer' requires ':<string>'
'#exit-code:1